@@ -1700,7 +1700,10 @@ expand_call_inline (tree *tp, int *walk_subtrees, void *data)
 	&& !TREE_NO_WARNING (fn)
 	&& !VOID_TYPE_P (TREE_TYPE (TREE_TYPE (fn)))
 	&& return_slot_addr == NULL_TREE
-	&& block_may_fallthru (copy))
+	/* APPLE LOCAL begin mainline 4.0 2005-07-08 4121982 */
+	&& block_may_fallthru (copy)
+	&& !DECL_IN_SYSTEM_HEADER (fn))
+	/* APPLE LOCAL end mainline 4.0 2005-07-08 4121982 */
       {
 	warning ("control may reach end of non-void function %qD being inlined",
 		 fn);
